--- a/assets/scss/search-page.scss
+++ b/assets/scss/search-page.scss
@@ -109,6 +109,10 @@
       }
       .form-group {
         margin-top: 0;
+        @include bootstrap.media-breakpoint-down(md) {
+          display: block;
+          margin: auto;
+        }
       }
     }
   }
